Add to static slides

--- a/craftmanship/static/index.html
+++ b/craftmanship/static/index.html
@@ -319,8 +319,15 @@ class Utils {
                     <p>Global state</p>
                     <pre><code class="PHP">$GLOBALS['database']->saveStuff();</code></pre>
                     <pre><code class="PHP">getDatabase()->saveStuff();</code></pre>
+                    <pre><code class="PHP">Database::saveStuff();</code></pre>
                     <pre><code class="PHP">Database::singleton()->saveStuff();</code></pre>
                     <pre><code class="PHP">ServiceRegistry::getService( 'database' )->saveStuff();</code></pre>
+                </section>
+
+                <section>
+                    <img src="img/hooks-doc.jpeg" />
+                    <br />
+                    <img src="img/hooks-members.jpeg" />
                 </section>
 
                 <section data-transition="linear">
