Add singleton picture

--- a/craftmanship/static/index.html
+++ b/craftmanship/static/index.html
@@ -309,8 +309,16 @@ class Utils {
                 </section>
 
                 <section>
-                    <p>Singleton</p>
-                    <p class="fragment">Often considered an anti-pattern</p>
+                    <img src="img/only-one.jpeg" />
+                </section>
+
+                <section>
+                    <img src="img/only-one.jpg" />
+                </section>
+
+                <section>
+                    <h3>Singleton</h3>
+                    <p>Often considered an anti-pattern</p>
                     <p class="fragment">Should not be used all over</p>
                     <p class="fragment">Global state is transitive</p>
                 </section>
