Tweak image width

--- a/craftmanship/static/index.html
+++ b/craftmanship/static/index.html
@@ -333,9 +333,9 @@ class Utils {
                 </section>
 
                 <section>
-                    <img src="img/hooks-doc.jpeg" />
+                    <img src="img/hooks-doc.jpeg" width="600px" />
                     <br />
-                    <img src="img/hooks-members.jpeg" />
+                    <img src="img/hooks-members.jpeg" width="600px" />
                 </section>
 
                 <section data-transition="linear">
