Move LSP slides

--- a/SOLID/LSP/index.html
+++ b/SOLID/LSP/index.html
@@ -1,357 +1,5 @@
-<!doctype html>
-<html lang="en">
-
-	<head>
-		<meta charset="utf-8">
-
-		<title>The Liskov Substitution Principle</title>
-
-		<meta name="description" content="A talk on the theory behind the Liskov substitution principle">
-		<meta name="author" content="Jeroen De Dauw">
-
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
-		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/default.css" id="theme">
-
-		<!-- For syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
-
-		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
-		<script>
-			document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
-		</script>
-
-		<!--[if lt IE 9]>
-		<script src="lib/js/html5shiv.js"></script>
-		<![endif]-->
-	</head>
-
-	<body>
-
-		<div class="reveal">
-
-			<div class="slides">
-
-				<section>
-					<h3>The Liskov Substitution Principle</h3>
-					<p>
-						<small>Presentation by <a href="http://jeroendedauw.com">Jeroen De Dauw</a> / <a href="http://twitter.com/JeroenDeDauw">@JeroenDeDauw</a></small>
-					</p>
-				</section>
-
-				<section>
-					<h2>Original definition</h2>
-					<p>
-						If for each object o1 of type S there is an object o2 of type T such that for all programs P
-						defined in terms of T, the behaviour of P is unchanged when o1 is substituted for o2 then S
-						is a subtype of T.
-					</p>
-
-				</section>
-
-				<section data-state="soothe">
-					<h3>Or in understandable format</h3>
-					<img width="320" height="299" src="img/subtype.svg" alt="Y U NO LOAD">
-					<aside class="notes">
-						* Subtypes can be used as parent types<br />
-						* User can use Sub without knowing it is not Type
-					</aside>
-				</section>
-
-				<section>
-					<h2>Obvious!</h2>
-					<p>
-						Or not?
-					</p>
-				</section>
-
-				<section>
-					<h2>Not just inheritance</h2>
-					<img width="320" height="299" src="img/subtype.svg" alt="Y U NO LOAD">
-
-					<aside class="notes">
-						* Static inheritance needed for polymorphism<br />
-						* Duck typing - message passing
-					</aside>
-
-					<p class="fragment">Static inheritance</p>
-					<p class="fragment">Duck typing</p>
-				</section>
-
-				<section>
-					<h2>Refused requests</h2>
-				</section>
-
-				<section>
-					<h3>Object missing property</h3>
-					<pre><code contenteditable  class="PHP">
-						class T() {}
-
-						$o = new T();
-
-						$o->f(); // boom
-					</code></pre>
-				</section>
-
-				<section>
-					<h3>Unexpected side effect(s)</h3>
-				</section>
-
-				<section>
-					<h3>The classic example</h3>
-					<pre><code contenteditable  class="PHP">
-class Rectange {
-	private $width;
-	private $height;
-	private $topLeftCorner;
-
-	public function getWidth();
-	public function getHeight();
-
-	public function setWidth( $width );
-	public function setHeight( $height );
-
-	public function getArea();
-}
-					</code></pre>
-				</section>
-
-				<section>
-					<h3>Square</h3>
-					<p class="fragment">What is the relationship?</p>
-					<p class="fragment">Square <strong>is a</strong> rectangle</p>
-					<p class="fragment">=> inheritance!</p>
-				</section>
-
-				<section>
-					<h3>To many fields</h3>
-
-					<pre><code contenteditable  class="PHP">
-class Rectange {
-	private $width;
-	private $height;
-	private $topLeftCorner;
-
-	public function getWidth();
-	public function getHeight();
-
-	public function setWidth( $width );
-	public function setHeight( $height );
-
-	public function getArea();
-}
-
-class Square extends Rectangle {}
-					</code></pre>
-
-					<p class="fragment">Lets not care, enough memory anyway!</p>
-					<p class="fragment">But what about <code>setHeight</code> and <code>setWidth</code>?</p>
-					<p class="fragment">Width and height need to be the same</p>
-				</section>
-
-				<section data-state="soothe">
-					<h3>Fixing the problem</h3>
-
-					<pre><code contenteditable  class="PHP">
-class Square extends Rectangle {
-    public function setWidth( $width ) {
-        $this->width = $width;
-        $this->height = $width;
-    }
-
-    public function setHeight( $height ) {
-        $this->width = $height;
-        $this->height = $height;
-    }
-}
-					</code></pre>
-
-					<p class="fragment">Still somewhat odd</p>
-					<p class="fragment">Though behaves like a rectangle</p>
-				</section>
-
-				<section data-state="alert">
-					<p><code>$rectangle->setHeight();</code></p>
-
-					<pre class="fragment"><code contenteditable class="PHP">
-function f( Rectangle $r ) {
-    $r->setWidth( 10 );
-    $r->setHeight( 5 );
-
-    assert( $r->getArea() === 50 ); // Boom
-}
-
-$a = new Square();
-f( $a );
-					</code></pre>
-
-					<p class="fragment">Have fun debugging!</p>
-					<p class="fragment">Hide if someone else finds this in your code</p>
-					<p class="fragment">How to fix this mess?</p>
-				</section>
-
-				<section>
-					<h3>Fixing the <s>fix</s> new problem</h3>
-
-					<pre><code contenteditable  class="PHP">
-function f( Rectangle $r ) {
-    if ( $r instanceof Square ) {
-        // ...
-    }
-    else { // Assume we got a Rectangle
-        // ...
-    }
-}
-					</code></pre>
-
-					<p class="fragment">OCP violation!</p>
-					<p class="fragment"><code>f</code> now dependent on <code>Square</code></p>
-				</section>
-
-				<section>
-					<h3>Third try is a charm!</h3>
-
-					<p>Let <code>Rectangle</code> extend <code>Square</code></p>
-
-					<pre><code contenteditable  class="PHP">
-class Square {
-    private $side;
-}
-
-class Rectangle extends Square {
-    private $otherSide;
-}
-					</code></pre>
-
-					<p class="fragment"><code>$s->setSide( 5 );</code></p>
-					<p class="fragment"><code>assert( $s->getArea() === 25 );</code></p>
-				</section>
-
-				<section>
-					<h3>The actual solution</h3>
-
-					<p class="fragment">Square and Rectangle are different, don't subtype!</p>
-
-					<p class="fragment">Never pass a Square into a method expecting Rectangle</p>
-
-					<p class="fragment">
-						But but but!
-						<br />Is a square not a rectangle?!
-					</p>
-				</section>
-
-				<section>
-					<h3>WTF?</h3>
-
-					<p>Is a square not a rectangle?!</p>
-
-					<p class="fragment">Yeah, it is a rectangle</p>
-
-					<p class="fragment">Contradicting yourself are you?</p>
-				</section>
-
-				<section>
-					<p>Nope</p>
-
-					<p>A square is a rectangle</p>
-
-					<pre class="fragment"><code contenteditable  class="PHP">
-						// This is not a square though
-						class Square {
-						// ...
-						}
-					</code></pre>
-
-					<p class="fragment">It is a code <strong>representing</strong> a square</p>
-				</section>
-
-				<section>
-					<h3>Representatives</h3>
-
-					<p class="fragment">Do not share the relationships of the things they represent</p>
-				</section>
-
-				<section>
-					<p>So I can't represent the real world?</p>
-
-					<p class="fragment">No real world principles violated</p>
-				</section>
-
-				<section>
-					<p>Integer <strong>is a</strong> real number</p>
-					<p class="fragment">Real number <strong>is a</strong> complex number</p>
-					<p class="fragment">Complex number <strong>contains</strong> two real number</p>
-
-					<p class="fragment">Makes perfect sense.<br />Free beer for who implements this and successfully instantiates a complex number</p>
-				</section>
-
-				<section>
-					<h3>More craziness</h3>
-
-					<p>Class T</p>
-					<p>Class S extends T</p>
-
-					<p class="fragment">List&lt;S&gt; is not a subtype of List&lt;T&gt;</p>
-
-					<p class="fragment">Cannot pass list of Square to function expecting list of Shape</p>
-
-					<pre class="fragment"><code contenteditable  class="PHP">
-$rectangles = new List&lt;Rectangle&gt;();
-
-f( $rectangles );
-
-function f( List&lt;Shape&gt; $list ) {
-    $list.add( new Circle() );
-}
-					</code></pre>
-
-					<p class="fragment">The relationship is again not carried over</p>
-				</section>
-
-				<section data-state="blackout">
-					<p>The end ... for now</p>
-				</section>
-
-				<section data-state="blackout">
-					<p><a href="http://bit.ly/solid-lsp">These slides: bit.ly/solid-lsp</a></p>
-					<p><a href="https://en.wikipedia.org/wiki/Liskov_substitution">Liskov substitution principle (WP)</a></p>
-					<p><a href="http://www.objectmentor.com/resources/articles/lsp.pdf">LSP (Robert C Martin, pdf)</a></p>
-				</section>
-			</div>
-
-		</div>
-
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.min.js"></script>
-
-		<script>
-
-			// Full list of configuration options available here:
-			// https://github.com/hakimel/reveal.js#configuration
-			Reveal.initialize({
-				controls: true,
-				progress: true,
-				history: true,
-				center: true,
-
-				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
-
-				// Optional libraries used to extend on reveal.js
-				dependencies: [
-					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'plugin/markdown/showdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
-					// { src: 'plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
-				]
-			});
-
-		</script>
-
-	</body>
+<html>
+<head>
+<meta http-equiv="refresh" content="0; url=https://github.com/JeroenDeDauw/slides/tree/master/craftmanship" />
+</head>
 </html>
