--- a/SOLID/LSP/index.html
+++ b/SOLID/LSP/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://github.com/JeroenDeDauw/slides/tree/master/craftmanship" />
+<meta http-equiv="refresh" content="0; url=http://jeroendedauw.github.io/slides/craftmanship/LSP" />
 </head>
 </html>
