Add image to LSP slides

--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -49,6 +49,8 @@
 						is a subtype of T.
 					</p>
 
+                    <img src="img/kaboom.png" class="fragment">
+
 				</section>
 
 				<section data-state="soothe">
