Improve LSP slides

--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -34,12 +34,27 @@
 
 			<div class="slides">
 
-				<section>
-					<h3>The Liskov Substitution Principle</h3>
-					<p>
-						<small>Presentation by <a href="http://jeroendedauw.com">Jeroen De Dauw</a> / <a href="http://twitter.com/JeroenDeDauw">@JeroenDeDauw</a></small>
-					</p>
-				</section>
+                <section>
+                    <h2>SOLID inheritance</h2>
+                    <p>
+                        The Liskov Substitution Principle
+                    </p>
+
+                    <p>
+                        <br />
+                        <small>
+                            Created by
+                            <a href="https://github.com/JeroenDeDauw">Jeroen De Dauw</a>
+                            for <a href="https://wikimedia.de/">Wikimedia Deutschland</a>
+                            <br />
+                            Licensed <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>
+                        </small>
+                    </p>
+
+                    <p><br /><a href="http://bit.ly/solid-lsp">
+                        http://bit.ly/solid-lsp
+                    </a></p>
+                </section>
 
 				<section>
 					<h2>Original definition</h2>
@@ -312,9 +327,9 @@ function f( List&lt;Shape&gt; $list ) {
 					<p class="fragment">The relationship is again not carried over</p>
 				</section>
 
-				<section data-state="blackout">
-					<p>The end ... for now</p>
-				</section>
+                <section data-state="blackout">
+                    <img src="img/i-has-question-lolcat.jpg" />
+                </section>
 
 				<section data-state="blackout">
 					<p><a href="http://bit.ly/solid-lsp">These slides: bit.ly/solid-lsp</a></p>
