--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -1,38 +1,44 @@
 <!doctype html>
 <html lang="en">
 
-	<head>
-		<meta charset="utf-8">
+    <head>
+        <meta charset="utf-8">
 
-		<title>The Liskov Substitution Principle</title>
+        <title>SOLID inheritance: The Liskov Substitution Principle</title>
 
-		<meta name="description" content="A talk on the theory behind the Liskov substitution principle">
-		<meta name="author" content="Jeroen De Dauw">
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/default.css" id="theme">
+        <link rel="stylesheet" href="css/reveal.css">
+        <link rel="stylesheet" href="css/theme/default.css" id="theme">
 
-		<!-- For syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+        <!-- For syntax highlighting -->
+        <link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
-		<script>
-			document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
-		</script>
+        <!-- If the query includes 'print-pdf', include the PDF print sheet -->
+        <script>
+            if( window.location.search.match( /print-pdf/gi ) ) {
+                var link = document.createElement( 'link' );
+                link.rel = 'stylesheet';
+                link.type = 'text/css';
+                link.href = 'css/print/pdf.css';
+                document.getElementsByTagName( 'head' )[0].appendChild( link );
+            }
+        </script>
 
-		<!--[if lt IE 9]>
-		<script src="lib/js/html5shiv.js"></script>
-		<![endif]-->
-	</head>
+        <!--[if lt IE 9]>
+        <script src="lib/js/html5shiv.js"></script>
+        <![endif]-->
+    </head>
 
-	<body>
+    <body>
 
-		<div class="reveal">
+    <div class="reveal">
 
-			<div class="slides">
+            <!-- Any section element inside of this container is displayed as a slide -->
+            <div class="slides">
 
                 <section>
                     <h2>SOLID inheritance</h2>
@@ -103,7 +109,7 @@
 
 				<section>
 					<h3>Object missing property</h3>
-					<pre><code contenteditable  class="PHP">
+					<pre><code contenteditable class="PHP">
 						class T() {}
 
 						$o = new T();
@@ -118,7 +124,7 @@
 
 				<section>
 					<h3>The classic example</h3>
-					<pre><code contenteditable  class="PHP">
+					<pre><code contenteditable class="PHP">
 class Rectange {
 	private $width;
 	private $height;
@@ -145,7 +151,7 @@ class Rectange {
 				<section>
 					<h3>To many fields</h3>
 
-					<pre><code contenteditable  class="PHP">
+					<pre><code contenteditable class="PHP">
 class Rectange {
 	private $width;
 	private $height;
@@ -171,7 +177,7 @@ class Square extends Rectangle {}
 				<section data-state="soothe">
 					<h3>Fixing the problem</h3>
 
-					<pre><code contenteditable  class="PHP">
+					<pre><code contenteditable class="PHP">
 class Square extends Rectangle {
     public function setWidth( $width ) {
         $this->width = $width;
@@ -212,7 +218,7 @@ f( $a );
 				<section>
 					<h3>Fixing the <s>fix</s> new problem</h3>
 
-					<pre><code contenteditable  class="PHP">
+					<pre><code contenteditable class="PHP">
 function f( Rectangle $r ) {
     if ( $r instanceof Square ) {
         // ...
@@ -232,7 +238,7 @@ function f( Rectangle $r ) {
 
 					<p>Let <code>Rectangle</code> extend <code>Square</code></p>
 
-					<pre><code contenteditable  class="PHP">
+					<pre><code contenteditable class="PHP">
 class Square {
     private $side;
 }
@@ -274,7 +280,7 @@ class Rectangle extends Square {
 
 					<p>A square is a rectangle</p>
 
-					<pre class="fragment"><code contenteditable  class="PHP">
+					<pre class="fragment"><code contenteditable class="PHP">
 						// This is not a square though
 						class Square {
 						// ...
@@ -296,33 +302,72 @@ class Rectangle extends Square {
 					<p class="fragment">No real world principles violated</p>
 				</section>
 
-				<section>
-					<p>Integer <strong>is a</strong> real number</p>
-					<p class="fragment">Real number <strong>is a</strong> complex number</p>
-					<p class="fragment">Complex number <strong>contains</strong> two real number</p>
+                <section>
+                    <section>
+                        <p>Integer <strong>is a</strong> real number</p>
+                        <p class="fragment">Real number <strong>is a</strong> complex number</p>
+                        <p class="fragment">Complex number <strong>contains</strong> two real number</p>
+    
+                        <p class="fragment">Makes perfect sense.<br />Free beer for who implements this and successfully instantiates a complex number</p>
+                    </section>
 
-					<p class="fragment">Makes perfect sense.<br />Free beer for who implements this and successfully instantiates a complex number</p>
-				</section>
+                    <section>
+                        <pre><code contenteditable class="PHP">
+class ComplexNumber {
+    private $realPart;
+    private $imaginaryPart;
+
+    function __construct( RealNumber $real, RealNumber $imaginary ) {
+        $this->realPart = $real;
+        $this->imaginaryPart = $imaginary;
+    }
+    public function getRealPart() {
+        return $this->realPart;
+    }
+    public function getImaginaryPart() {
+        return $this->imaginaryPart;
+    }
+}
+                        </code></pre>
+                    </section>
+
+                    <section>
+                        <pre><code contenteditable class="PHP">
+class RealNumber extends ComplexNumber {
+
+    public function __construct( RealNumber $realPart ) {
+        parent::__construct(
+            $realPart,
+            new RealNumber( /* 0 */ )
+        );
+    }
+
+}
+                        </code></pre>
+                    </section>
+                </section>
 
 				<section>
 					<h3>More craziness</h3>
 
-					<p>Class T</p>
-					<p>Class S extends T</p>
+					<p>Class <span style="color:lightblue">T</span></p>
+					<p>Class <span style="color:lightgreen">S</span> extends <span style="color:lightblue">T</span></p>
 
-					<p class="fragment">List&lt;S&gt; is not a subtype of List&lt;T&gt;</p>
+					<p class="fragment">List&lt;<span style="color:lightgreen">S</span>&gt; is not a subtype of List&lt;<span style="color:lightblue">T</span>&gt;</p>
 
-					<p class="fragment">Cannot pass list of Square to function expecting list of Shape</p>
+					<p class="fragment">Cannot pass list&lt;Square&gt; to function expecting list&lt;Shape&gt;</p><br />
 
-					<pre class="fragment"><code contenteditable  class="PHP">
-$rectangles = new List&lt;Rectangle&gt;();
+					<pre class="fragment"><code contenteditable class="PHP">
+$squares = new List&lt;Square&gt;();
 
-f( $rectangles );
+f( $squares );
 
 function f( List&lt;Shape&gt; $list ) {
+					</code></pre>
+                    <pre class="fragment"><code contenteditable class="PHP">
     $list.add( new Circle() );
 }
-					</code></pre>
+                    </code></pre>
 
 					<p class="fragment">The relationship is again not carried over</p>
 				</section>
@@ -336,39 +381,42 @@ function f( List&lt;Shape&gt; $list ) {
 					<p><a href="https://en.wikipedia.org/wiki/Liskov_substitution">Liskov substitution principle (WP)</a></p>
 					<p><a href="http://www.objectmentor.com/resources/articles/lsp.pdf">LSP (Robert C Martin, pdf)</a></p>
 				</section>
-			</div>
+            </div>
 
-		</div>
+    </div>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.min.js"></script>
+    <script src="lib/js/head.min.js"></script>
+    <script src="js/reveal.min.js"></script>
 
-		<script>
+    <script>
 
-			// Full list of configuration options available here:
-			// https://github.com/hakimel/reveal.js#configuration
-			Reveal.initialize({
-				controls: true,
-				progress: true,
-				history: true,
-				center: true,
+        // Full list of configuration options available here:
+        // https://github.com/hakimel/reveal.js#configuration
+        Reveal.initialize({
+            controls: true,
+            progress: true,
+            history: true,
+            center: true,
 
-				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+            theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
+            transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
 
-				// Optional libraries used to extend on reveal.js
-				dependencies: [
-					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'plugin/markdown/showdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
-					// { src: 'plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
-				]
-			});
+            // Parallax scrolling
+            // parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
+            // parallaxBackgroundSize: '2100px 900px',
 
-		</script>
+            // Optional libraries used to extend on reveal.js
+            dependencies: [
+                { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+                { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+                { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+                { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+                { src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+                { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+            ]
+        });
 
-	</body>
+    </script>
+
+    </body>
 </html>
