--- a/craftmanship/functions/index.html
+++ b/craftmanship/functions/index.html
@@ -217,7 +217,7 @@ function notifyReviewers() {
 
                 <section>
                     <p>
-                        Long functions are familiar.
+                        Long functions are familiar.<br />
                         Like landscapes, we recognize the landmarks
                     </p>
                 </section>
@@ -401,7 +401,7 @@ if ( set( "username", "NyanCat" ) )
                     <div class="fragment">
                         <br />
                         <h3>Attribution</h3>
-                        <p>Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2013 Hakim El Hattab</p>
+                        <p>Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2014 Hakim El Hattab</p>
                         <small>
                             <br />
                             A lot of the material in these slides is based on works by Robert C. Martin.<br />
