--- a/craftmanship/static/index.html
+++ b/craftmanship/static/index.html
@@ -323,6 +323,7 @@ class Awesome {
                         <pre><code class="PHP">Database::saveStuff();</code></pre>
                         <pre><code class="PHP">Database::singleton()->saveStuff();</code></pre>
                         <pre><code class="PHP">ServiceRegistry::getService( 'database' )->saveStuff();</code></pre>
+                        <pre class="fragment"><code class="PHP">( new Database() )->saveStuff();</code></pre>
                     </section>
 
                     <section>
