Update bit.ly link

--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -40,7 +40,7 @@
             <h2>Yearly SMW overview</h2>
             <p>
                 Presentation by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
-                bit.ly/2014-smw<br /><br />
+                bit.ly/smw-2014<br /><br />
                 <a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2014/Current_Status_and_Next_Steps_for_SMW">SMWCon Fall 2014, Vienna</a>
             </p>
         </section>
