--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -121,7 +121,7 @@
         <section>
             <section>
                 <p>
-                    TravisCI!<br />
+                    Continuous integration!<br />
                     <img src="img/travis_history.jpeg" alt="Y U NO LOAD">
                 </p>
             </section>
@@ -153,6 +153,10 @@
 
         <section data-state="blackout" data-transition="linear">
             <h2>SMW 2.0</h2>
+        </section>
+
+        <section data-state="blackout" data-transition="linear">
+            <h2>SMW 2.1</h2>
         </section>
 
         <section data-state="blackout" data-transition="linear">
